Do not start the server in test